# source_organizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
assets/: innovation_id_to_source_id.txt
scripts/: find_sources.py
source_organizer/: find_sources.py
src/: file_utils.py  utils.py
tests/: test_copy_files.py  test_copy_sources.py  test_create_directory.py  test_get_input_ids.py  test_get_project_root.py  test_get_source_names.py
